# Spark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SparkConfig.cmake  settings.cmake
docs/: Application.md  Audio.md  Entity Component System.md  Event Types.md  Events.md  Getting Started.md  Input.md  Logging.md  Setup.md  Windows.md
docs/contributors/: Namespaces.md
docs/rendering/: Camera.md  Materials.md  Models.md  Renderer.md  Shaders.md
docs/rendering/advanced/: Buffers & Arrays.md  Textures.md
resources/shaders/: red.frag  red.vert
src/: Main.cpp  Spark.h  SparkEngine.cpp  SparkEngine.h  macros.h  pch.h
src/audio/: Audio.cpp  Audio.h  AudioFactory.cpp  AudioFactory.h  AudioPlatforms.h
src/audio/abstract/: Listener.h  Playable.cpp  Playable.h  Sound.cpp  Sound.h  Source.h
src/audio/openal/: Listener.cpp  Listener.h  OpenAL.h  OpenALAudio.cpp  OpenALAudio.h  Sound.cpp  Sound.h  Source.cpp  Source.h
src/core/: Application.cpp  Application.h  SparkEngine.cpp  SparkEngine.h
src/entities/: BaseComponent.h  ComponentTypeRegistry.h  Entity.h  EntityID.h  EntityManager.h  View.cpp  View.h
src/errors/: OpenGLErrorHandler.cpp  OpenGLErrorHandler.h
src/events/: Event.h  EventContainer.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  Events.h
src/events/events/: WindowCloseEvent.h  WindowResize.h
src/graphics/: MVP.cpp  MVP.h  Renderer.cpp
src/graphics/abstract/: IndexBuffer.h  MVP.h  Material.cpp  Material.h  Renderer.h
src/graphics/abstract/buffers/: Buffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/graphics/abstract/models/: Model.h
src/graphics/abstract/shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/graphics/abstract/textures/: Texture.cpp  Texture.h
src/graphics/api/: Camera.cpp  Camera.h  GraphicsFactory.cpp  GraphicsFactory.h
src/graphics/api/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  KeyboardCameraController.cpp  KeyboardCameraController.h  MVP.cpp  MVP.h
src/graphics/api/models/: FileParserMTL.cpp  FileParserMTL.h  FileParserOBJ.cpp  FileParserOBJ.h
src/graphics/buffers/: Buffer.cpp  Buffer.h  BufferLayout.h  VertexBuffer.h
src/graphics/opengl/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/graphics/opengl/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/graphics/opengl/shaders/: FragmentShader.cpp  FragmentShader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUtils.cpp  ShaderUtils.h  VertexShader.cpp  VertexShader.h
src/graphics/opengl/textures/: Texture.cpp  Texture.h
src/graphics/shaders/: Shader.cpp
src/graphics/textures/: Texture.cpp  Texture.h
src/logging/: InternalLogging.cpp  InternalLogging.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  SparkLogger.h
src/opengl/: Renderer.h  TypeConverter.h  VertexArray.cpp  VertexArray.h
src/opengl/buffers/: IndexBuffer.h
src/opengl/shaders/: Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/precompiled_headers/: logging.h  std.h  utils.h
src/systems/: System.h  SystemManager.cpp  SystemManager.h
src/utils/: DateUtils.cpp  DateUtils.h  MVP.cpp  MVP.h  WeakVector.h
src/window/abstract/: Window.cpp  Window.h
src/window/api/: Input.cpp  Input.h  KeysAndButtons.h  WindowFactory.cpp  WindowFactory.h
src/window/events/: EventHandler.cpp  Events.h
src/window/events/events/: WindowCloseEvent.h
src/window/glfw/: GLFWWindow.cpp  GLFWWindow.h
tests/: EntitiesTest.cpp  MVPTest.cpp  TestMain.cpp  TexturesTest.cpp  test.cpp
tests/entities/: entities_test.cpp
window/events/: Event.h  EventHandler.cpp  EventListener.cpp  EventListener.h  EventPriority.h
window/events/events/: WindowCloseEvent.h
